--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,7 +30,7 @@
       <ng-container matColumnDef="employeeName">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Employee Name</th>
         <td mat-cell *matCellDef="let row">
-          {{ row.firstName }}{{ row.lastName }}
+          {{ row.firstName }} {{ row.lastName }}
         </td>
       </ng-container>
 
@@ -78,7 +78,11 @@
             <mat-icon>edit</mat-icon>
           </button>
 
-          <button mat-icon-button color="warn">
+          <button
+            mat-icon-button
+            color="warn"
+            (click)="deleteAnEmployee(row.id)"
+          >
             <mat-icon>delete</mat-icon>
           </button>
         </td>
