--- a/src/app/emp-add-edit/emp-add-edit.component.html
+++ b/src/app/emp-add-edit/emp-add-edit.component.html
@@ -119,7 +119,7 @@
     </div>
   </div>
   <div mat-dialog-actions class="button_actions">
-    <button mat-raised-button>Cancel</button>
+    <button mat-raised-button type="button">Cancel</button>
     <button mat-raised-button color="primary" type="submit">Save</button>
   </div>
 </form>
