--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -74,7 +74,11 @@
       <ng-container matColumnDef="action">
         <th mat-header-cell *matHeaderCellDef mat-sort-header>Action</th>
         <td mat-cell *matCellDef="let row">
-          <button mat-icon-button color="primary">
+          <button
+            mat-icon-button
+            color="primary"
+            (click)="openEditEmpForm(row)"
+          >
             <mat-icon>edit</mat-icon>
           </button>
 
